# apollonian_core_ingestor

./: CMakeLists.txt  README.md  config.json
include/ingestor/: config.hpp  ingestor.hpp  metrics.hpp  ring_buffer.hpp  serializer.hpp
src/: config.cpp  ingestor.cpp  main.cpp
tests/: test_ring_buffer.cpp  test_serializer.cpp
